<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/container_gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_icon_description"
        android:src="@drawable/ic_ulik_batik"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/loginTitle"/>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:fontFamily="@font/gfs_didot"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintBottom_toBottomOf="@id/loginDescription"/>

    <TextView
        android:id="@+id/loginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_description"
        android:fontFamily="@font/poppins"
        android:textColor="@color/blackTransparent"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginBottom="400dp"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_field"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="55dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginDescription"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_field"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="55dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEdit"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:letterSpacing="0.3"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/button_gradient"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginToRegister"/>

    <TextView
        android:id="@+id/loginToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_register"
        android:fontFamily="@font/poppins"
        android:textColor="@color/blackTransparent"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/loginBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/poppins"
        android:textColor="@color/primaryOrange"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toEndOf="@id/loginToRegister"
        app:layout_constraintEnd_toEndOf="@id/loginBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
