<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit"
        android:fontFamily="@font/poppins_bold"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_image"
        android:fontFamily="@font/poppins"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        tools:ignore="RtlSymmetry" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@tools:sample/avatars"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage"/>

    <TextView
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit_image"
        android:fontFamily="@font/poppins"
        android:textColor="@color/primaryBrown"
        android:background="@drawable/button_menu_general"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username2"
        android:fontFamily="@font/poppins"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_grey_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/button_gradient"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editUsername"/>

</androidx.constraintlayout.widget.ConstraintLayout>