<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/divider"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/batikName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/batik_name"
        android:fontFamily="@font/poppins_bold"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <TextView
        android:id="@+id/batikLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batik_loc"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:drawableStartCompat="@drawable/ic_location"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="@id/batikName"
        app:layout_constraintTop_toBottomOf="@id/batikName"/>

    <TextView
        android:id="@+id/batikDesc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/container_batik_description"
        android:text="@string/lorem"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="@id/batikName"
        app:layout_constraintEnd_toEndOf="@id/batikName"
        app:layout_constraintTop_toBottomOf="@id/batikLoc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_make_post"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/button_gradient"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batikDesc"/>

</androidx.constraintlayout.widget.ConstraintLayout>